[gd_scene load_steps=5 format=3 uid="uid://bc6y12rk0u6ho"]

[ext_resource type="Script" path="res://entites/objects/scripts/window.gd" id="1_74aif"]
[ext_resource type="AudioStream" uid="uid://b81ss6uf6uwxv" path="res://sound/sfx/glass-hit-192119.mp3" id="2_rqfb3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e1v3d"]
resource_local_to_scene = true
size = Vector2(8, 60)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8pvke"]
particle_flag_disable_z = true
direction = Vector3(-45, 10, 10)
spread = 35.0
initial_velocity_min = 150.0
initial_velocity_max = 150.0
scale_min = 3.0
scale_max = 5.0
color = Color(0.372725, 0.650219, 1, 1)

[node name="window" type="StaticBody2D" groups=["nav", "window"]]
collision_mask = 21
script = ExtResource("1_74aif")

[node name="Sprite" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_e1v3d")

[node name="placeholder" type="ColorRect" parent="."]
visible = false
offset_left = -4.0
offset_top = -30.0
offset_right = 4.0
offset_bottom = 30.0
color = Color(0, 0.516667, 1, 1)

[node name="Window_bits" type="GPUParticles2D" parent="."]
emitting = false
amount = 32
process_material = SubResource("ParticleProcessMaterial_8pvke")
lifetime = 0.2
explosiveness = 1.0
fixed_fps = 0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AudioSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_rqfb3")
bus = &"sfx"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
